# tektrackerV2

./: .gitignore  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
src/: App.js
src/Components/Assignment/: AssignmentForm.js  GradesForm.js
src/Components/Assignment/Display/: AssignmentSteps.js
src/Components/InputForms/: Login.js  NewStudentForm.js  NewTeacherForm.js  Register.js  Register2.js
src/Components/Layout/: Wrapper.js
