[tool.poetry]
name = "tektrackerv2"
version = "0.2.0"
description = "Tek Tracker Version 2"
authors = ["Fernando Martinez Mojica <fernando.mojica@utexas.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.11.0"
whitenoise = "^5.0.1"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
